--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "osd/aurox",
+    "name": "osd84/aurox",
     "description": "Lib for build web app",
     "type": "library",
     "license": "MIT",
