--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,6 @@
         "ext-curl": "*"
     },
     "require-dev": {
-        "petitcitron/brutaltestrunner": "^2.0"
+        "osd84/brutaltestrunner": "^2.0"
     }
 }
