+ getParam + osd84/phpmailer repo local

--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         }
     ],
     "require": {
-        "phpmailer/phpmailer": "^6.9",
         "ext-pdo": "*",
         "ext-curl": "*",
         "ext-mbstring": "*",
-        "ext-imagick": "*"
+        "ext-imagick": "*",
+        "osd84/phpmailer": "^6.10"
     },
     "require-dev": {
         "osd84/brutaltestrunner": "^3.0"
